--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,23 @@ venv
 tasks.db
 .idea
 __pycache__
+.env
+*.pyc
+*.pyo
+*.pyd
+.Python
+env
+pip-log.txt
+pip-delete-this-directory.txt
+.tox
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.log
+.git
+.mypy_cache
+.pytest_cache
+.hypothesis
